# SemanticFusion

./: CMakeLists.txt  caffe.patch  elasticfusion.patch  semantic_dictionary.txt  semantic_dictionary_scannet.txt  semanticfusion-library.cpp
src/gui/: Gui.cpp  Gui.h
src/map_interface/: ElasticFusionInterface.h
src/semantic_fusion/: SemanticFusionInterface.cpp  SemanticFusionInterface.h
